# emp-ot

./: .gitignore  .travis.yml  AGENTS.md  AUDIT_FINDINGS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_NOTICES.md  TODO  circle.yml  emp-ot  emp-ot-config.cmake  emp-ot.h  exec-lattice-test.sh  exec-test  install_packages_lattice.sh  lgtm.yml  ot-timer-log  run  run.sh  timer-log
.github/workflows/: arm.yml  build.yml  codeql.yml  emp-tool.dep  x86.yml
audit-report/: 00-overview.html  01-base-ot.html  02-ot-extension.html  03-silent.html  04-svole.html  claims.md  index.html
bench/: CMakeLists.txt  bench.h  bench_base_ot.cpp  bench_cggm.cpp  bench_f2k_vole.cpp  bench_ferret.cpp  bench_fp_vole.cpp  bench_iknp.cpp  bench_ot_extension.cpp  bench_silentferret.cpp  bench_softspoken.cpp
cmake/: FindNTL.cmake  Finddgs.cmake  emp-ot-config.cmake  emp-ot-config.cmake.in  tuning_local.stub.h
docs/: adding-a-protocol.md  class-organization.md  performance-tuning.md  streaming-api.md  wire-trace-hashes.md
emp-ot/: cggm.h  co.h  cot.h  csw.h  deltaot.h  emp-ot.h  ideal.h  iknp.cpp  iknp.h  iknp.hpp  lattice.h  latticeInclude.h.in  lpn.h  mextension.h  mextension_alsz.h  mextension_kos.h  np.h  ot.h  ot_extension.h  pprf.h  pvw.h  sfrot.h  shextension.h  table.h  tuning.h
emp-ot/base_ot/: base_ot_select.h  bmm.h  co.h  csw.h  csw_base_ot.h  np.h  pvw.h  pvw_kyber.h  sfrot_check.h
emp-ot/base_ot/mlkem/: bmm.cpp  crs.hpp  params.hpp  symmetric.h
emp-ot/base_ot/pvw_kyber/: crs.hpp  params.hpp  pvw_kyber.cpp  symmetric.h
emp-ot/common/: cggm.h  lpn.h  mp_gadget.h  streaming_extension.h
emp-ot/ferret/: .twokeyprp.h.swp  base_cot.h  cggm.h  constants.h  dual_lpn_f2.h  ferret_cot.cpp  ferret_cot.h  ferret_cot.hpp  level_correction.h  lpn_f2.h  mpcot_reg.h  preot.h  spcot.h  spcot_recver.h  spcot_sender.h  twokeyprp.h
emp-ot/ot_extension/: cggm.h  iknp.cpp  iknp.h  ot_extension.h
emp-ot/ot_extension/ferret/: constants.h  ferret.cpp  ferret.h  ferret_cot.cpp  ferret_cot.h  lpn_f2.h  mpcot.h  mpcot_reg.h  silent_ferret.cpp  silent_ferret.h  spcot.h  test_random.h
emp-ot/ot_extension/softspoken/: sfvole_butterfly.h  softspoken.cpp  softspoken.h  softspoken_ot.cpp  softspoken_ot.h  ss_bench_phases.h
emp-ot/pvw_kyber/: crs.hpp  encode.hpp  params.hpp  pvw_kyber.cpp
emp-ot/softspoken/: aes_ctr_fold.h  conv.h  pprf.h  sfvole_butterfly.h  sfvole_dispatch.h  sfvole_view_b.h  small_vole.h  softspoken_ot.cpp  softspoken_ot.h  subspace_vole.h  twokeyprp.h
emp-ot/svole/: f2k_vole.h  fp_base_svole.h  fp_utility.h  fp_vole.h  mpsvole.h  svole.h  svole_extension.h
include/: ot.h  ot_co.h  ot_ideal.h  ot_np.h
ot/: co.h  ideal.h  iterated.h  mextension_alsz.h  mextension_kos.h  np.h  ot.h  ot_co.h  ot_committing_mextension.h  ot_committing_mextension2.h  ot_extension.h  ot_iterated.h  ot_mextension.h  ot_mextension2.h  ot_shextension.h  shextension.h
src/: test_ot.cpp
test/: CMakeLists.txt  base_ot.cpp  bench_aes_batch.cpp  bench_base_ot.cpp  bench_breakdown.cpp  bench_cggm.cpp  bench_cggm_tile.cpp  bench_conv.cpp  bench_dual_lpn.cpp  bench_ferret_phase.cpp  bench_ferret_rcot.cpp  bench_iknp_rcot.cpp  bench_lpn.cpp  bench_multikey_aes.cpp  bench_ot_extension.cpp  bench_pprf.cpp  bench_sfvole_v2.cpp  bench_silentferret_rcot.cpp  bench_softspoken_phase.cpp  bench_softspoken_rcot.cpp  committing_ot.cpp  deltaot.cpp  ferret.cpp  ferret_trace.cpp  ferret_trace_io.h  ideal.cpp  iter_ot.cpp  lattice.cpp  mot.cpp  ot.cpp  print_precomputation_table.cpp  prof_sfvole_local.cpp  sfrot.cpp  shot.cpp  simpleot.cpp  softspoken.cpp  test.h  test_base_ot.cpp  test_choice_seed.cpp  test_contracts.cpp  (+16 more)
test/baseline/: ferret-cggm.alice.trace  ferret-cggm.bob.trace
tools/: CMakeLists.txt  tune.cpp
